--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
@@ -442,7 +442,7 @@
                 success: function(data) {
                     var member_info = data.member_info;
                     renderDynamicData(member_info);
-                    getHistory(data.exlottery_history);
+                    getHistory(data.scanlottery_history);
                     initLottery();
                     loadingStatus(false);
                 },
