--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -893,9 +893,9 @@ ul.wui-relatelink li h3{
 .wui-productlist .wui-block-type1 a[class^="wui-inner-box"] .wui-inner-pic img,
 .wui-product .wui-block-type2 a[class^="wui-inner-box"] .wui-inner-pic img,
 .wui-productlist .wui-block-type2 a[class^="wui-inner-box"] .wui-inner-pic img{
-    min-height: 100%;
-    min-width: 100%;
-    vertical-align: middle;
+    max-height: 100%;
+    max-width: 100%;
+    margin: auto;
 }
 .wui-product .wui-block-type1 .wui-inner-pic p,.wui-productlist .wui-block-type1 .wui-inner-pic p{
     line-height: 135px;
