--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -167,22 +167,22 @@
             }
         });
     });
-    // var scanCode = '';
-    // loadingStatus(true);
-    // wx.ready(scanQrcode);
+    var scanCode = '';
+    loadingStatus(true);
+    wx.ready(scanQrcode);
 
-    // function scanQrcode(){
-    //     wx.scanQRCode({
-    //         needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
-    //         scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
-    //         success: function (res) {
-    //             loadingStatus(false);
-    //             var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
-    //             scanCode = result.substr(result.length - 20);
-    //             console.log(result, scanCode);
+    function scanQrcode(){
+        wx.scanQRCode({
+            needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+            scanType: ["qrCode"], // 可以指定扫二维码还是一维码，默认二者都有
+            success: function (res) {
+                loadingStatus(false);
+                var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                scanCode = result.substr(result.length - 20);
+                console.log(result, scanCode);
                 $('.wa-scanlottery-container').show();
-    //         }
-    //     });
-    // }
+            }
+        });
+    }
 </script>
 {% endblock %}
