--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
@@ -96,6 +96,27 @@
     .wui-resultDialog .wui-i-content{
         font-weight: bold;
     }
+    @media screen and (min-width: 360px) {
+        .wui-scanlotterydescription {
+            height: 475px;
+        }     
+    }
+    @media screen and (min-width: 375px) {
+        .wui-lotterydescription>.wui-i-title {
+            height: 155px;
+        }
+        .wui-scanlotterydescription {
+            height: 490px;
+        }     
+    }
+    @media screen and (min-width: 414px) {
+        .wui-lotterydescription>.wui-i-title {
+            height: 170px;
+        }
+        .wui-scanlotterydescription {
+            height: 542px;
+        }
+    }
 </style>
 {% endblock %}
 
