--- a/weapp/termite/static/termite_js/app/component/appkit/scanlotterydescription/scanlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/scanlotterydescription/scanlotterydescription.html
@@ -104,7 +104,7 @@
         </div>
     </div>
 <div
-    class="wui-surveyDescription xa-prizeContainer"
+    class="wui-surveyDescription xa-prizeContainer wui-scanlotteryDescription"
     style="min-height:100px; background-color:{% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};"
 >
     <div class="wui-i-subtitle xa-subtitle" style="background-color: {% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
