--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -2812,7 +2812,7 @@ li.wui-selectBox-display-table {
 /*百宝箱 scratch CSS ---- end */
 .wui-scanlotterydescription {
 	background: url(/termite_static/img/component/scanlottery/lottery_bg.jpg) no-repeat;
-	background-size: 100% auto;
+	background-size: 100% 100%;
 }
 .wui-scanlotteryDescription {
 	padding-top: 2px;
