app_base.html添加js文件

--- a/weapp/templates/apps_base.html
+++ b/weapp/templates/apps_base.html
@@ -135,9 +135,12 @@
         <script type="text/javascript" src="/termite_static/v3/lib/exif.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/system.js"></script>
         <script type="text/javascript" src="/termite_static/backbone/underscore-1.4.4.min.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeMask.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/apps_validate.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/lib/lazyload.js"></script>
+        <script type="text/javascript" src="/static_v2/lib/handlebars-v3.0.1.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/system/api.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/crypto-js.js"></script>
@@ -147,6 +150,8 @@
         <script type="text/javascript" src="/termite_static/v3/system/preview_imges.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/appalert.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/apps_addImg.js"></script>
+        <!--商品的加载-->
+        <script type="text/javascript" src="/termite_static/v3/webapp/wepage_async_component_load.js"></script>
 
         <!-- *end_prunt_task* -->
 
