--- a/weapp/static_v2/js/view/mall_products_pool_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_products_pool_filter_view/template.html
@@ -12,9 +12,19 @@
 			<input type="text" class="form-control" id="supplier" name="supplier" value="" />
 		</div>
 	</div>
+	<div class="xui-col disTc">
+	<div class="xui-i-item">
+			<label>扣点类型：</label>
+			<select id="supplier_type" name="supplier_type">
+				<option value="-1">全部</option>
+				<option value="0" name="supplier_type">首月55分成</option>
+			</select>
+		</div class="xui-i-item">
+	</div>
 </div>
 <div class="xui-btn-group">
 	<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查询</a>
 	<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重置</a>
 </div>
 </script>
+
